Here's the commented version of the code:

```ruby
#!/usr/bin/env ruby

# Copyright 2016 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.

require 'thread'

# A class for maintaining a histogram of values with logarithmic bucketing
class Histogram
  # Determines the appropriate bucket index for a given value
  # using logarithmic scaling based on the multiplier
  # @param value [Numeric] the value to be placed in a bucket
  # @return [Integer] the index of the bucket for the given value
  def bucket_for(value)
    (Math.log(value)/Math.log(@multiplier)).to_i
  end

  # Initializes a new Histogram instance
  # @param resolution [Float] the resolution factor for bucket sizing (determines bucket width)
  # @param max_possible [Numeric] the maximum possible value that might be recorded
  def initialize(resolution, max_possible)
    @lock = Mutex.new  # Mutex for thread-safe operations
    @resolution = resolution  # Resolution factor for bucket sizing
    @max_possible = max_possible  # Maximum possible value to be recorded
    @sum = 0  # Running sum of all added values
    @sum_of_squares = 0  # Running sum of squares of all added values
    @multiplier = 1 + resolution  # Multiplier for logarithmic bucket calculation
    @count = 0  # Total count of values added
    @min_seen = max_possible  # Tracks the minimum value seen (initialized to max possible)
    @max_seen = 0  # Tracks the maximum value seen
    # Initialize buckets array with enough buckets to hold max_possible value
    @buckets = Array.new(bucket_for(max_possible) + 1, 0)
  end

  # Adds a new value to the histogram
  # @param value [Numeric] the value to add to the histogram
  def add(value)
    @sum += value
    @sum_of_squares += value * value
    @count += 1
    if value < @min_seen
      @min_seen = value
    end
    if value > @max_seen
      @max_seen = value
    end
    @buckets[bucket_for(value)] += 1
  end

  # Returns the minimum value seen
  # @return [Numeric] the minimum value recorded
  def minimum
    @min_seen
  end

  # Returns the maximum value seen
  # @return [Numeric] the maximum value recorded
  def maximum
    @max_seen
  end

  # Returns the sum of all values
  # @return [Numeric] the sum of all recorded values
  def sum
    @sum
  end

  # Returns the sum of squares of all values
  # @return [Numeric] the sum of squares of all recorded values
  def sum_of_squares
    @sum_of_squares
  end

  # Returns the count of values
  # @return [Integer] the total number of values recorded
  def count
    @count
  end

  # Returns the bucket counts
  # @return [Array<Integer>] an array containing counts for each bucket
  def contents
    @buckets
  end

  # Merges another histogram into this one in a thread-safe manner
  # Combines statistics and bucket counts from the other histogram
  # @param hist [Histogram] the histogram to merge into this one
  def merge(hist)
    @lock.synchronize do
      @min_seen = hist.min_seen
      @max_seen = hist.max_seen
      @sum += hist.sum
      @sum_of_squares += hist.sum_of_squares
      @count += hist.count
      received_bucket = hist.bucket.to_a
      @buckets = @buckets.map.with_index{ |m,i| m + received_bucket[i].to_i }
    end
  end
end
```

Key improvements in the comments:
1. Added class-level documentation explaining the purpose of the Histogram class
2. Added detailed parameter and return value documentation for each method
3. Explained the purpose of each instance variable in the initialize method
4. Clarified the thread-safety aspects (Mutex usage)
5. Added documentation for the logarithmic bucketing strategy
6. Noted the statistical tracking capabilities (sum, sum of squares, min/max)
7. Explained the merge operation's thread-safe nature and what it combines

The comments now provide a clear understanding of:
- The histogram's bucketing strategy
- What statistics are being tracked
- Thread-safety considerations
- How to use each method
- The purpose of each instance variable