Here's the commented version of the code:

```c++
# Copyright 2021 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""A simple test to ensure that the Python wrapper can get xDS config."""

# Import necessary libraries
from concurrent.futures import ThreadPoolExecutor
import logging
import os
import queue
import sys
import time
import unittest

# Import protocol buffer definitions and gRPC related modules
from envoy.service.status.v3 import csds_pb2
from envoy.service.status.v3 import csds_pb2_grpc
from google.protobuf import json_format
import grpc
import grpc_csds

# Define constants for test configuration
_DUMMY_XDS_ADDRESS = "xds:///foo.bar"  # Dummy xDS server address for testing
_DUMMY_BOOTSTRAP_FILE = """
{
  \"xds_servers\": [
    {
      \"server_uri\": \"fake:///xds_server\",
      \"channel_creds\": [
        {
          \"type\": \"fake\"
        }
      ],
      \"server_features\": [\"xds_v3\"]
    }
  ],
  \"node\": {
    \"id\": \"python_test_csds\",
    \"cluster\": \"test\",
    \"metadata\": {
      \"foo\": \"bar\"
    },
    \"locality\": {
      \"region\": \"corp\",
      \"zone\": \"svl\",
      \"sub_zone\": \"mp3\"
    }
  }
}\
"""  # JSON configuration for bootstrap

# Skip test if running on Python 2.x as protobuf descriptors moved to Python 3
@unittest.skipIf(
    sys.version_info[0] < 3, "ProtoBuf descriptor has moved on from Python2"
)
class TestCsds(unittest.TestCase):
    """Test class for Client Status Discovery Service (CSDS) functionality."""

    def setUp(self):
        """Set up test environment before each test method."""
        # Set environment variable for bootstrap config
        os.environ["GRPC_XDS_BOOTSTRAP_CONFIG"] = _DUMMY_BOOTSTRAP_FILE
        
        # Create and start gRPC server with thread pool executor
        self._server = grpc.server(ThreadPoolExecutor())
        port = self._server.add_insecure_port("localhost:0")
        
        # Add CSDS servicer to the server
        grpc_csds.add_csds_servicer(self._server)
        self._server.start()

        # Create channel and stub for CSDS client
        self._channel = grpc.insecure_channel("localhost:%s" % port)
        self._stub = csds_pb2_grpc.ClientStatusDiscoveryServiceStub(
            self._channel
        )

    def tearDown(self):
        """Clean up test environment after each test method."""
        self._channel.close()
        self._server.stop(0)
        os.environ.pop("GRPC_XDS_BOOTSTRAP_CONFIG", None)

    def get_xds_config_dump(self):
        """Fetch client status using CSDS stub.
        
        Returns:
            The client status response containing xDS configuration.
        """
        return self._stub.FetchClientStatus(csds_pb2.ClientStatusRequest())

    def test_no_lds_found(self):
        """Test case to verify behavior when no Listener Discovery Service (LDS) is found."""
        # Create a dummy channel with test address
        dummy_channel = grpc.insecure_channel(_DUMMY_XDS_ADDRESS)

        # Verify that RPC call fails with expected status code
        with self.assertRaises(grpc.RpcError) as rpc_error:
            dummy_channel.unary_unary(
                "",
                _registered_method=True,
            )(b"", wait_for_ready=False, timeout=1)
        self.assertEqual(
            grpc.StatusCode.DEADLINE_EXCEEDED, rpc_error.exception.code()
        )

        # Poll for xDS configuration until we find the expected status
        while True:
            resp = self.get_xds_config_dump()

            # Verify basic node information in the response
            self.assertEqual(1, len(resp.config))
            self.assertEqual("python_test_csds", resp.config[0].node.id)
            self.assertEqual("test", resp.config[0].node.cluster)
            
            # Convert response to dictionary for easier inspection
            config = json_format.MessageToDict(resp)
            ok = False
            try:
                # Check for listener configuration in xDS config
                for xds_config in config["config"][0].get("xdsConfig", []):
                    if "listenerConfig" in xds_config:
                        listener = xds_config["listenerConfig"][
                            "dynamicListeners"
                        ][0]
                        if listener["clientStatus"] == "REQUESTED":
                            ok = True
                            break
                
                # Check for listener configuration in generic xDS config
                for generic_xds_config in config["config"][0].get(
                    "genericXdsConfigs", []
                ):
                    if "Listener" in generic_xds_config["typeUrl"]:
                        if generic_xds_config["clientStatus"] == "REQUESTED":
                            ok = True
                            break
            except KeyError as e:
                logging.debug("Invalid config: %s\n%s: %s", config, type(e), e)
            
            # Break loop if expected status is found, otherwise wait and retry
            if ok:
                break
            time.sleep(1)
        dummy_channel.close()

# Skip test if running on Python 2.x (same as parent class)
@unittest.skipIf(
    sys.version_info[0] < 3, "ProtoBuf descriptor has moved on from Python2"
)
class TestCsdsStream(TestCsds):
    """Test class for streaming version of CSDS functionality."""
    
    def get_xds_config_dump(self):
        """Fetch client status using streaming CSDS stub.
        
        Returns:
            The client status response containing xDS configuration.
        """
        if not hasattr(self, "request_queue"):
            # Initialize request queue and response iterator on first call
            request_queue = queue.Queue()
            response_iterator = self._stub.StreamClientStatus(
                iter(request_queue.get, None)
            )
        
        # Put request in queue and get next response
        request_queue.put(csds_pb2.ClientStatusRequest())
        return next(response_iterator)

if __name__ == "__main__":
    # Configure logging and run tests with verbose output
    logging.basicConfig(level=logging.DEBUG)
    unittest.main(verbosity=2)
```